feat(Problem6): 닉네임을 두 글자씩 잘라서 저장하는 기능 구현